--- a/Segunda Entrega Coder/blog_autos/blog/Templates/blog/home.html
+++ b/Segunda Entrega Coder/blog_autos/blog/Templates/blog/home.html
@@ -31,7 +31,7 @@
                 </div>
                 
                 <a href="{% url 'auto_editar' auto.pk %}" 
-                   style="display: inline-block; padding: 5px 10px; background-color: #007bff; color: white; 
+                   style="display: inline-block; padding: 5px 10px; background-color: #6d0000; color: white; 
                           text-decoration: none; border-radius: 4px; margin-top: 6px; font-size: 13px;">
                     Editar
                 </a>
